--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"license": "Apache-2.0",
 	"description": "Deploy and build games to Steam / Itch using Electron and Greenworks with GitHub Actions",
 	"greenhub": {
-		"live": "app://index.html?live",
-		"dev": "app://index.html?dev"
+		"live": "https://theia.games",
+		"dev": "https://theia.games"
 	},
 	"scripts": {
 		"dev": "electron . --dev",
@@ -17,7 +17,7 @@
 		"android": "cordova build --release --no-telemetry"
 	},
 	"build": {
-		"appId": "GreenHub",
+		"appId": "Theia.Games",
 		"mac": {
 			"category": "app.game",
 			"target": "default"
@@ -33,9 +33,9 @@
 		"win": {
 			"fileAssociations": [
 				{
-					"ext": "hub",
-					"name": "Drag Onto GreenHub",
-					"description": "How Lucky! You found a GreenHub Binary! +5 to encumbrance ",
+					"ext": ".theia",
+					"name": "Drag Onto Theia.Games",
+					"description": "How Lucky! You found a Theia.Games Binary! +5 to encumbrance ",
 					"role": "Editor",
 					"icon": "build/win.ico"
 				}
